--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
+    "antd": "^5.8.3",
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
@@ -32,10 +37,10 @@
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "husky": "^8.0.0",
     "prettier": "^3.0.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vite-tsconfig-paths": "^4.2.0",
-    "husky": "^8.0.0"
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
